--- a/roles/master/templates/openssl.cnf.j2
+++ b/roles/master/templates/openssl.cnf.j2
@@ -11,6 +11,7 @@ DNS.1 = kubernetes
 DNS.2 = kubernetes.default
 DNS.3 = kubernetes.default.svc
 DNS.4 = kubernetes.default.svc.cluster.local
+DNS.5 = coreos-master
 IP.1 = {{ K8S_SERVICE_IP }}
 IP.2 = {{ MASTER_HOST }}
 IP.3 = {{ MASTER_HOST_PUB }}
