--- a/ansible/roles/master/templates/openssl.cnf.j2
+++ b/ansible/roles/master/templates/openssl.cnf.j2
@@ -12,6 +12,7 @@ DNS.2 = kubernetes.default
 DNS.3 = kubernetes.default.svc
 DNS.4 = kubernetes.default.svc.cluster.local
 DNS.5 = coreos-master
+DNS.6 = {{ inventory_hostname }}
 IP.1 = {{ K8S_SERVICE_IP }}
 IP.2 = {{ MASTER_HOST }}
 IP.3 = {{ MASTER_HOST_PUB }}
