--- a/ansible/roles/node/templates/worker-openssl.cnf.j2
+++ b/ansible/roles/node/templates/worker-openssl.cnf.j2
@@ -7,5 +7,6 @@ basicConstraints = CA:FALSE
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 subjectAltName = @alt_names
 [alt_names]
+DNS.1 = {{ inventory_hostname }}
 IP.1 = $ENV::WORKER_IP
 IP.2 = $ENV::WORKER_IP_PUB
